--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <main>
-        <img src="" alt="">
-        <h1>Jonas Holmberg</h1>
-        <p>bleh bleh bleblehh</p>
-        <ul>
-            <li>Ett element är lika stort som inehållet</li>
-            <li>Höjden är automatisk, dvs. auto.</li>
-        </ul>
+        <div>
+            <h1>Jonas Holmberg</h1>
+            <p>bleh bleh bleblehh</p>
+            <ul>
+                <li>Ett element är lika stort som inehållet</li>
+                <li>Höjden är automatisk, dvs. auto.</li>
+            </ul>
+        </div>
+        <img src="WIN_20250925_09_30_04_Pro.jpg" alt="bild på mig">
     </main>
 </body>
 </html>
