--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
+    <main class="card">
         <div>
             <h1>Jonas Holmberg</h1>
             <p>bleh bleh bleblehh</p>
             <ul>
                 <li>Ett element är lika stort som inehållet</li>
                 <li>Höjden är automatisk, dvs. auto.</li>
+                <li><a href="#">en länk</a></li>
             </ul>
         </div>
         <img src="WIN_20250925_09_30_04_Pro.jpg" alt="bild på mig">
